# JiPP2

./: CMakeLists.txt
allocation_basics/: CMakeLists.txt  main.cpp
matrixApp/: CMakeLists.txt
matrixApp/include/: matrixFunctions.h
matrixApp/matrixLib/: CMakeLists.txt  library.cpp
matrixApp/src/: CMakeLists.txt  main.cpp
simpleCalc/: CMakeLists.txt
simpleCalc/include/: calc.h
simpleCalc/src/: calc.cpp  main.cpp
simpleCalendar/: CMakeLists.txt
simpleCalendar/include/: Calendar.h  Day.h  Gregorian.h  Julian.h
simpleCalendar/src/: CMakeLists.txt  Calendar.cpp  Day.cpp  Gregorian.cpp  Julian.cpp  main.cpp
